--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,83 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+	/* colour */
+	--munsell-n1: #08090b;
+	--munsell-n2: #2c2c2e;
+	--munsell-n6: #8f8f8d;
+	--munsell-n9: #e6e4dc;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+	/* type & line scale */
+	--scale-xs: clamp(0.375rem, -0.125rem + 1.6vw, 0.625rem);
+	--scale-s: clamp(0.625rem, -0.125rem + 2.4vw, 1rem);
+	--scale-m: clamp(1rem, -0.25rem + 4vw, 1.625rem);
+	--scale-l: clamp(1.625rem, -0.375rem + 6.4vw, 2.625rem);
+	--scale-xl: clamp(2.625rem, -0.625rem + 10.4vw, 4.25rem);
+	--scale-2xl: clamp(4.25rem, -1rem + 16.8vw, 6.875rem);
+	--scale-3xl: clamp(6.875rem, -1.625rem + 27.2vw, 11.125rem);
+	--scale-4xl: clamp(11.125rem, -2.625rem + 44vw, 18rem);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+/* light & dark theme colour set */
+@media (prefers-color-scheme: light){
+	:root{
+		--color-background: var(--munsell-n9);
+		--color-gray: var(--munsell-n6);
+		--color-contrast: var(--munsell-n2);
+	}
+}
+@media (prefers-color-scheme: dark){
+	:root {
+		--color-background: var(--munsell-n1);
+		--color-gray: var(--munsell-n6);
+		--color-contrast: var(--munsell-n9);
+	}
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+/* reset */
+body, h1, h2, h3, h4, p, h5, h6, figure, ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+*, *::before, *::after{
+	box-sizing: border-box;
+}
+a{
+	color: inherit;
+	text-decoration: none;
 }
 
-html,
+/* colour-applying */
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	background-color: var(--color-background);
+	color: var(--color-contrast);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* typesetting */
+.type-xs, h5{
+	font-size: var(--scale-xs);
+	line-height: var(--scale-s);
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.type-s, p, h4{
+	font-size: var(--scale-s);
+	line-height: var(--scale-m);
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.type-m, h3{
+	font-size: var(--scale-m);
+	line-height: var(--scale-l);
+}
+.type-l{
+	font-size: var(--scale-l);
+	line-height: var(--scale-xl);
+}
+.type-xl, h2{
+	font-size: var(--scale-xl);
+	line-height: var(--scale-2xl);
+}
+.type-2xl{
+	font-size: var(--scale-2xl);
+	line-height: var(--scale-3xl);
+}
+.type-3xl, h1{
+	font-size: var(--scale-3xl);
+	line-height: var(--scale-4xl);
 }
