--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -39,6 +39,12 @@
   font-family: var(--font-mono);
 }
 
+.pageTitle{
+  font-family: articulat-cf, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(4, minmax(25%, auto));
