--- a/src/components/navigation/nav.module.css
+++ b/src/components/navigation/nav.module.css
@@ -10,4 +10,7 @@
 
 	padding-top: var(--padding-td);
 	padding-right: var(--padding-lr);
+
+	font-size: var(--scale-s);
+	line-height: var(--scale-m);
 }
