--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,7 @@ a{
 body {
 	background-color: var(--color-background);
 	color: var(--color-contrast);
+	min-height: 100dvh;
 }
 
 /* typesetting */
