--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,9 @@
 	--scale-l: clamp(1.625rem, -0.375rem + 6.4vw, 2.625rem);
 	--scale-xl: clamp(2.625rem, -0.625rem + 10.4vw, 4.25rem);
 	--scale-2xl: clamp(4.25rem, -1rem + 16.8vw, 6.875rem);
+	--scale-t-3xl: clamp(4.25rem, -9.5rem + 44vw, 11.125rem);
 	--scale-3xl: clamp(6.875rem, -1.625rem + 27.2vw, 11.125rem);
+	--scale-t-4xl: fclamp(6.875rem, -15.375rem + 71.2vw, 18rem);
 	--scale-4xl: clamp(11.125rem, -2.625rem + 44vw, 18rem);
 
 	/* padding scale */
@@ -83,7 +85,12 @@ body {
 	font-size: var(--scale-2xl);
 	line-height: var(--scale-3xl);
 }
-.type_3xl, h1{
+.type_3xl{
 	font-size: var(--scale-3xl);
 	line-height: var(--scale-4xl);
+}
+
+h1{
+	font-size: var(--scale-t-3xl);
+	line-height: var(--scale-t-4xl);
 }
