--- a/src/app/Blog/page.module.css
+++ b/src/app/Blog/page.module.css
@@ -3,7 +3,7 @@
 }
 
 .portalLink {
-	margin-top: 60dvh;
+	margin-top: 40dvh;
 
 	padding-left: 1.25dvw;
 	padding-right: 1.25dvw;
@@ -14,4 +14,7 @@
 	flex-direction: column;
 	margin-left: auto;
 	margin-right: auto;
+
+	/* disable to see */
+	opacity: 0;
 }
