--- a/src/app/Blog/typesetting-with-reductionism/page.module.css
+++ b/src/app/Blog/typesetting-with-reductionism/page.module.css
@@ -1,5 +1,10 @@
 .contents{
   display: flex;
+  flex-direction: column;
+
+  	margin-top: 34dvh;
+  	margin-left: auto;
+	margin-right: auto;
 
   max-width: calc(60 * var(--scale-s));
 }
