--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,9 +15,10 @@
   flex-direction: column;
   position: absolute;
 
-  max-width: calc(60 * var(--scale-s));
+  max-width: calc(60 * var(--scale-s) + 2.5dvw);
 
   bottom: var(--scale-l);
 
-  margin-left: 1.25dvw;
+  padding-left: 1.25dvw;
+  padding-right: 1.25dvw;
 }
