--- a/src/app/Works/built-my-own-page/page.module.css
+++ b/src/app/Works/built-my-own-page/page.module.css
@@ -6,6 +6,7 @@
   margin-top: var(--scale-3xl);
   max-width: calc(60 * var(--scale-s));
   margin-left: auto;
+  padding-right: 1.25dvw;
 
   display: flex;
   justify-content: right;
