--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,10 +10,7 @@
   font-weight: 600;
 }
 
-.description{
-  font-size: var(--scale-s);
-  line-height: var(--scale-m);
-  
+.description{  
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -24,4 +21,9 @@
 
   padding-left: 1.25dvw;
   padding-right: 1.25dvw;
+}
+
+.description p{
+  font-size: var(--scale-s);
+  line-height: var(--scale-m);
 }
