--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 	--scale-2xl: clamp(4.25rem, -1rem + 16.8vw, 6.875rem);
 	--scale-t-3xl: clamp(4.25rem, -9.5rem + 44vw, 11.125rem);
 	--scale-3xl: clamp(6.875rem, -1.625rem + 27.2vw, 11.125rem);
-	--scale-t-4xl: fclamp(6.875rem, -15.375rem + 71.2vw, 18rem);
+	--scale-t-4xl: clamp(6.875rem, -15.375rem + 71.2vw, 18rem);
 	--scale-4xl: clamp(11.125rem, -2.625rem + 44vw, 18rem);
 }
 
