--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,7 +7,7 @@
 	flex-direction: row;
 	justify-content: flex-end;
 
-	margin-top: calc(50dvh - 2 * var(--scale-l) - 2 * var(--scale-m));
+	margin-top: calc(50dvh - 3 * var(--scale-l));
 	margin-right: 1.25dvw;
 
 	gap: var(--scale-m);
