--- a/src/components/hero-tier1/hero-t1.module.css
+++ b/src/components/hero-tier1/hero-t1.module.css
@@ -2,9 +2,9 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	position: absolute;
-
-	top: var(--scale-xs);
+	
+	margin-top: calc(-1 * var(--scale-t-m));
+	margin-right: calc(10 * var(--scale-t-s) + 2.5dvw);
 
 	padding-left: 1.25dvw;
 }
