--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -41,7 +41,8 @@ const sortedWorks = allWorks
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    min-height: 100dvh;
+    min-height: calc(100dvh - var(--header-height));
+    padding-top: var(--header-height);
   }
 
   .works-list {
