--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -33,8 +33,8 @@
 
     gap: var(--scale-s);
 
-    padding-top: 1dvh;
-    padding-right: 1.25dvw;
+    padding-block: var(--header-padding-block);
+    padding-inline: 0 var(--header-padding-inline);
 
     font-size: var(--scale-t-s);
     line-height: var(--scale-t-m);
