--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -44,7 +44,8 @@ const { Content } = await entry.render();
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    min-height: 100dvh;
+    min-height: calc(100dvh - var(--header-height));
+    padding-top: var(--header-height);
   }
 
   .blog-post {
