style: center blog content and standardize max-width across pages

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -49,9 +49,10 @@ const { Content } = await entry.render();
   }
 
   .blog-post {
-    margin-left: 1.25dvw;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: var(--scale-m);
-    max-width: calc(100dvw - 10 * var(--scale-t-s) - 3.75dvw);
+    max-width: calc(60 * var(--scale-t-s) + 5dvw);
   }
 
   .blog-meta {
