chore: update site domain from 1exicon.com to 1ex.me across config and pages

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,7 +16,7 @@ const sortedPosts = allBlogPosts
   <Header />
   <main class="main">
     <HeroTier2
-      dir="1exicon.com/Blog"
+      dir="1ex.me/Blog"
       title="Blog"
     />
     <ul class="blog-list">
