--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -21,7 +21,7 @@ const { Content } = await entry.render();
   <Header />
   <main class="main">
     <HeroTier2
-      dir={`1exicon.com/Blog/${entry.slug}`}
+      dir={`1ex.me/Blog/${entry.slug}`}
       title={entry.data.title}
     />
     <article class="blog-post">
