--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -16,7 +16,7 @@ const sortedWorks = allWorks
   <Header />
   <main class="main">
     <HeroTier2
-      dir="1exicon.com/Works"
+      dir="1ex.me/Works"
       title="Works"
     />
     <ul class="works-list">
