--- a/src/pages/works/[slug].astro
+++ b/src/pages/works/[slug].astro
@@ -29,7 +29,7 @@ function resolveImagePath(src: string, slug: string) {
   <Header />
   <main class="main">
     <HeroTier2
-      dir={`1exicon.com/Works/${entry.slug}`}
+      dir={`1ex.me/Works/${entry.slug}`}
       title={entry.data.title}
     />
     <article class="work-post">
