chore: update contact email address in landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import HeroTier1 from '../components/HeroTier1.astro';
         <a href="/works"><p class="link">See my works &gt;</p></a>
       </li>
       <li>
-        <a href="mailto:contact.4194304@gmail.com"><p class="link">Contact me &gt;</p></a>
+        <a href="mailto:1exicon.portal@gmail.com"><p class="link">Contact me &gt;</p></a>
       </li>
     </ul>
     <div class="description">
