--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -128,4 +128,11 @@ const { Content } = await entry.render();
     background: none;
     padding: 0;
   }
+
+  .blog-content :global(img) {
+    max-width: 34rem;
+    height: auto;
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
 </style>
