chore: update social links and adjust blog post layout spacing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,13 @@
 <footer>
   <ul class="footer-nav">
     <li>
-      <a href="https://twitter.com/_Lex_icon" target="_blank" rel="noopener noreferrer">Twitter &gt;</a>
+      <a href="https://twitter.com/1ex_me" target="_blank" rel="noopener noreferrer">Twitter &gt;</a>
     </li>
     <li>
-      <a href="https://www.instagram.com/__lex__icon" target="_blank" rel="noopener noreferrer">Instagram &gt;</a>
+      <a href="https://bsky.app/profile/1ex.me" target="_blank" rel="noopener noreferrer">Bluesky &gt;</a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com/1ex.me" target="_blank" rel="noopener noreferrer">Instagram &gt;</a>
     </li>
   </ul>
 </footer>
@@ -21,7 +24,7 @@
 
     margin-right: 1.25dvw;
 
-    gap: var(--scale-m);
+    gap: var(--scale-s);
 
     font-size: var(--scale-s);
     line-height: var(--scale-m);
