--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -53,7 +53,9 @@ const { Content } = await entry.render();
     margin-left: auto;
     margin-right: auto;
     margin-top: var(--scale-m);
+    padding-top: var(--scale-4xl);
     max-width: calc(60 * var(--scale-t-s) + 5dvw);
+    margin-bottom: var(--scale-m);
   }
 
   .blog-meta {
