refactor: simplify blog slug handling by using built-in Astro slug property

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,7 +6,6 @@ import Footer from '../components/Footer.astro';
 import HeroTier2 from '../components/HeroTier2.astro';
 import ThumbBlog from '../components/ThumbBlog.astro';
 import { getDescription } from '../components/ExcerptHelper';
-import { getBlogSlug } from '../lib/blogSlug';
 
 const allBlogPosts = await getCollection('blog');
 const sortedPosts = allBlogPosts
@@ -25,7 +24,7 @@ const sortedPosts = allBlogPosts
       {sortedPosts.map((post) => (
         <li>
           <ThumbBlog
-            url={`/blog/${getBlogSlug(post)}`}
+            url={`/blog/${post.slug}`}
             date={post.data.date.toLocaleDateString('ja-JP')}
             title={post.data.title}
             description={getDescription({
