fix: simplify page titles by removing "portfolio website" suffix

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,7 +13,7 @@ const sortedPosts = allBlogPosts
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
-<Layout title="Blog - Lex portfolio website">
+<Layout title="Blog - Lex">
   <Header />
   <main class="main">
     <HeroTier2
