--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -37,7 +37,7 @@ const ogImage = await pickOgImage([...baseCandidates]);
 ---
 
 <Layout
-  title={`${entry.data.title} - Lex portfolio website`}
+  title={`${entry.data.title} - Lex`}
   description={entry.data.description}
   ogImage={ogImage}
 >
