--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Footer from '../components/Footer.astro';
 import HeroTier1 from '../components/HeroTier1.astro';
 ---
 
-<Layout title="Lex portfolio website">
+<Layout title="Lex">
   <Header />
   <main class="main">
     <HeroTier1
