--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -12,7 +12,7 @@ const sortedWorks = allWorks
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
-<Layout title="Works - Lex portfolio website">
+<Layout title="Works - Lex">
   <Header />
   <main class="main">
     <HeroTier2
