--- a/src/pages/works/[slug].astro
+++ b/src/pages/works/[slug].astro
@@ -25,7 +25,7 @@ function resolveImagePath(src: string, slug: string) {
 }
 ---
 
-<Layout title={`${entry.data.title} - Lex portfolio website`} description={entry.data.description}>
+<Layout title={`${entry.data.title} - Lex`} description={entry.data.description}>
   <Header />
   <main class="main">
     <HeroTier2
