--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ export interface Props {
 }
 
 const {
-  title = 'Lex portfolio website',
+  title = 'Lex',
   description = 'Lex is Japan based DTP/typograghy/UI/web designer.',
   ogImage = DEFAULT_OG_IMAGE_PATH,
 } = Astro.props;
