--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,7 +58,7 @@ body, h1, h2, h3, h4, p, h5, h6, figure, ul{
 }
 a{
 	color: inherit;
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 /* colour-applying */
