--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -72,12 +72,15 @@ const ogImage = await pickOgImage([...baseCandidates]);
   }
 
   .blog-post {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 4dvw;
+    margin-right: 4dvw;
     margin-top: var(--scale-m);
     padding-top: var(--scale-4xl);
-    max-width: calc(60 * var(--scale-t-s) + 5dvw);
+    max-width: 52rem;
     margin-bottom: var(--scale-m);
+    display: flex;
+    flex-direction: column;
+    align-self: center;
   }
 
   .blog-meta {
