refactor: remove client:load directives from Analytics and SpeedInsights components

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,8 +46,8 @@ const ogImageType = guessOgImageMimeType(ogImage);
   </head>
   <body style="font-family: 'Space Grotesk', sans-serif;">
     <slot />
-    <Analytics client:load/>
-    <SpeedInsights client:load/>
+    <Analytics />
+    <SpeedInsights />
   </body>
 </html>
 
