--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,12 +42,12 @@ const ogImageType = guessOgImageMimeType(ogImage);
     <meta name="twitter:image" content={ogImageUrl} />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet preconnect">
   </head>
   <body style="font-family: 'Space Grotesk', sans-serif;">
     <slot />
-    <Analytics client:load/>
-    <SpeedInsights client:load/>
+    <Analytics />
+    <SpeedInsights />
   </body>
 </html>
 
